# poetry-pybind11-integration

./: .gitignore  README.md  benchmark.py  benchmark_graphs.ipynb  build.py  pyproject.toml
poetry_pybind11_integration/: __init__.py
pybind11_extension/src/: main.cpp
tests/: test_poetry_pybind11_integration.py  test_pybind11_extension.py
