[tool.poetry]
name = "poetry-pybind11-integration"
version = "0.1.0"
description = ""
authors = ["Octavi Font <octavi.fs@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pybind11 = ">=2.8.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = [
    "poetry-core>=1.1.0",
    "setuptools>=65.4.1",
    "pybind11>=2.8.0"
]
build-backend = "poetry.core.masonry.api"
